fix: payment screen alignment

--- a/src/styles/Payout/PayoutForm.module.scss
+++ b/src/styles/Payout/PayoutForm.module.scss
@@ -5,9 +5,10 @@
     width: 100%;
     height: 100%;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     box-sizing: border-box;
+    margin-top: 20px;
 
     h2 {
         font-weight: 500;
@@ -22,7 +23,7 @@
         flex-direction: column;
         align-items: start;
         justify-content: center;
-        width: 50%;
+        width: 40%;
 
         span {
             color: $coinbase-blue;
@@ -30,7 +31,7 @@
     }
 
     .formContainer {
-        width: 50%;
+        width: 60%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -70,6 +71,11 @@
 
                     .rowHeader {
                         font-weight: 700;
+
+                        span {
+                            font-size: 12px;
+                            font-weight: 400;
+                        }
                     }
 
                     input {
